# oopt-gnpy

./: .codecov.yml  .coveragerc  .docker-entry.sh  .docker-travis.sh  .gerrit+travis.sh  .gitignore  .gitreview  .lgtm.yml  .pylintrc  .readthedocs.yml  .travis.yml  .zuul.yaml  AUTHORS.rst  CONTRIBUTING.rst  Contributors.md  Dockerfile  Excel_userguide.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  contributors.md  equalisation_proposal.txt  groups  json_structure_description.doc  json_structure_description.rst  main  path_result_template.json  project.config  requirements.txt  service-template.json  setup.cfg  setup.py  tox.ini  transmission_main_example.py  travis_pypi_setup.py  utilities.py  webhooks.config
.github/: ISSUE_TEMPLATE.md  codeql.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  flake8.yml  main.yml
core/: __init__.py  __main__.py  algorithms.py  compute.py  elements.py  info.py  network.py  node.py  spectral_info.py
docker/: Dockerfile-compose  README.md  docker-compose.yml  run.sh
docs/: .gitignore  Makefile  about-project.md  about-project.rst  amplifier_models_description.rst  biblio.bib  calendar.html  calendar.md  cli_options.rst  concepts.rst  conf.py  excel.rst  extending.rst  gn_model.rst  gnpy-api-core.rst  gnpy-api-tools.rst  gnpy-api-topology.rst  gnpy-api-yang.rst  gnpy-api.rst  index.rst  install.rst  installation.rst  intro.rst  json.rst  json_instance_examples.rst  make.bat  model.rst  publications.rst  release-notes.rst  requirements.txt  usage.rst  yang.md  yang.rst
docs/_static/: custom.css
docs/asciicast/: transmission_main_example.asciicast
docs/source/: gnpy.core.rst  gnpy.rst  modules.rst
examples/: 1.json  2019-demo-equipment.json  2019-demo-services.json  2019-demo-topology.json  2019-generate-tip-demo.py  CORONET_Global_Topology.json  CORONET_Global_Topology.xls  OperatorInputNetworkv3-xufeng.json  OperatorInputNetworkv3.json  Transmission Main Example.ipynb  compare.py  compare_json.py  convert.py  convert_service_sheet.py  coronet.asia.json  coronet.conus.json  coronet.europe.json  coronet.json  coronet_conus_example.json  create_eqpt_sheet.py  default_edfa_config.json  demo.json  edfa_config.json  edfa_example_network.json  edfa_example_network_auto_design.json  edfa_example_network_with_lumped_losses.json  eqpt_config.json  eqpt_with_raman_config.json  fused_roadm_example_network.json  juniperTopologyExampleV2J.xls  meshTopologyExampleV2.json  meshTopologyExampleV2.xls  meshTopologyExampleV2_auto_design.json  meshTopologyExampleV2_services.json  meshTopologyToy.xls  meshTopologyToy2.xls  path_requests_run.py  raman_edfa_example_network.json  raman_edfa_example_network_auto_design.json  serviceDemov1.json  (+7 more)
examples/coronet/: Makefile  coronet.asia.json  coronet.europe.json  coronet.json
examples/edfa/: Pchan2D.txt  edfa_config.json  edfa_example_network.json  example.py
examples/edfa_model/: DGT_96.txt  OA.json  Pchan2DLegend.txt  amplifier.py  amplifier2.py  amplifier_models_description.rst  amplifier_pytest.py  build_oa_json.py  newOA.json  pNFfit3.txt
gnpy/: __init__.py  __main__.py  __main_ole__.py  architecture.py  cli.py  constants.py  from-f0545c.patch  gnpy.py  network_elements.py  sim_ex.py  utils.py
gnpy/api/: __init__.py  rest_example.py
gnpy/configuration/: fiber_parameters.py  general_parameters.py  link_description.py
gnpy/core/: __init__.py  __main__.py  ansi_escapes.py  constants.py  convert.py  elements.py  equipment.py  exceptions.py  execute.py  info.py  network.py  node.py  parameters.py  request.py  science_utils.py  service_sheet.py  spectrum_assignment.py  units.py  utils.py
gnpy/example-data/: CORONET_CONUS_Topology.json  CORONET_Global_Topology.json  Juniper-BoosterHG.json  Sweden_OpenROADMv4_example_network.json  Sweden_OpenROADMv5_example_network.json  create_eqpt_sheet.py  default_edfa_config.json  edfa_example_network.json  eqpt_config.json  eqpt_config_multiband.json  eqpt_config_openroadm.json  eqpt_config_openroadm_ver4.json  eqpt_config_openroadm_ver5.json  extra_eqpt_config.json  initial_spectrum1.json  initial_spectrum2.json  sim_params.json  (+12 more)
hooks/: pre-commit
tests/: CORONET_Global_Topology.json  LinkforTest.json  __init__.py  amplifier_test.py  compare.py  conftest.py  eqpt_config_test.json  excelTestFile.xls  excelTestFileFused.xls  excelTestFile_expected.json  excelTestFile_services_expected.json  excelTestFileallILA.xls  excelTestFileallILAandEqt.xls  excelTestFilenoILA.xls  meshTopologyExampleV2Eqpt_expected.json  meshTopologyExampleV2_expected.json  meshTopologyExampleV2_services_expected.json  parsers_test.py  propagation_test.py  requirements.txt  testFileallILA.json  testFileallILAandEqt.json  test_amplifier.py  test_automaticmodefeature.py  test_cli_utils.py  test_create_eqpt_sheet.py  test_disjunction.py  test_equalization.py  test_examples.py  test_gain_mode.py  test_gnpy.py  test_info.py  test_invocation.py  test_json_io.py  test_legacy_yang.py  test_logger.py  test_network.json  test_network_functions.py  test_opensource_compliancy.py  test_parameters.py  (+15 more)
yang/: all.json  tip-photonic-equipment.yang  tip-photonic-topology.yang
yangModels/: convertTpce.py  convert_xmltojson.py  gnpy-eqpt-config-complet.yang  gnpy-eqpt-config-detail.yang  gnpy-eqpt-config.yang  gnpy-network-topology.yang  gnpy-network-topology@2018-11-19.yang  gnpy-network-topology@2018-12-14.yang  gnpy-path-computation-simplified@2019-01-08.yang  gnpy-path-computation-simplified@2019-05-02.yang  gnpy-path-computation-simplified@2019-05-07.yang  gnpy-path-computation@2018-11-19.yang  ietf-network-topology-gnpy@2019-01-09.yang  ietf-network-topology-optical-params@2019-01-15.yang  ietf-te-path-computation@2018-06-19.yang
(+424 files in other folders)
