[metadata]
name = gnpy
description = Route planning and optimization tool for mesh optical networks
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
author = Telecom Infra Project
author-email = jan.kundrat@telecominfraproject.com
license = BSD-3-Clause
home-page = https://github.com/Telecominfraproject/oopt-gnpy
project_urls =
    Bug Tracker = https://github.com/Telecominfraproject/oopt-gnpy/issues
    Documentation = https://gnpy.readthedocs.io/
python-requires = >=3.6
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: System :: Networking
keywords =
    optics
    network
    fiber
    communication
    route
    planning
    optimization

[pbr]
warnerrors = True

[files]
packages = gnpy
data_files =
	examples = examples/*
# FIXME: solve example data files

[options.entry_points]
console_scripts =
    gnpy-example-data = gnpy.tools.cli_examples:show_example_data_dir
    gnpy-transmission-example = gnpy.tools.cli_examples:transmission_main_example
    gnpy-path-request = gnpy.tools.cli_examples:path_requests_run
    gnpy-convert-xls = gnpy.tools.convert:_do_convert
