[metadata]
name = gnpy
description-file = README.md
description-content-type = text/markdown; variant=GFM
author = Telecom Infra Project
author-email = jkt@jankundrat.com
license = BSD-3-Clause
home-page = https://github.com/Telecominfraproject/oopt-gnpy
project_urls =
    Bug Tracker = https://github.com/Telecominfraproject/oopt-gnpy/issues
    Documentation = https://gnpy.readthedocs.io/
python-requires = >=3.8
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: System :: Networking
keywords =
    optics
    network
    fiber
    communication
    route
    planning
    optimization

[pbr]
warnerrors = True

[files]
packages = gnpy

[options.entry_points]
console_scripts =
    gnpy-example-data = gnpy.tools.cli_examples:show_example_data_dir
    gnpy-transmission-example = gnpy.tools.cli_examples:transmission_main_example
    gnpy-path-request = gnpy.tools.cli_examples:path_requests_run
    gnpy-convert-xls = gnpy.tools.convert:_do_convert

[options]
install_requires =
	# matplotlib 3.8 removed support for Python 3.8
	matplotlib>=3.7.3,<4
	# networkx 3.2 removed support for Python 3.8
	networkx>=3.1,<4
	# numpy 1.25 removed support for Python 3.8
	numpy>=1.24.4,<2
	pbr>=6.0.0,<7
	# scipy 1.11 removed support for Python 3.8
	scipy>=1.10.1,<2
	# xlrd 2.x removed support for .xlsx, it's only .xls now
	xlrd>=1.2.0,<2

[options.extras_require]
tests =
	build>=1.0.3,<2
	pytest>=7.4.3,<8
	# pandas 2.1 removed support for Python 3.8
	pandas>=2.0.3,<3
	# flake v6 killed the --diff option
	flake8>=5.0.4,<6

docs =
	alabaster>=0.7.12,<1
	docutils>=0.17.1,<1
	myst-parser>=0.16.1,<1
	Pygments>=2.11.2,<3
	rstcheck
	Sphinx>=5.3.0,<6
	sphinxcontrib-bibtex>=2.4.1,<3
